--- a/dz3/playbook.yml
+++ b/dz3/playbook.yml
@@ -44,13 +44,13 @@
         - uninstall
     - name: start wordpress
       ansible.builtin.command: >
-        docker run --name wordpress -p 8080:80 --restart always -d
+        docker run --name wordpress -p {{load_balancer_port}}:80 --restart always -d
         -e WORDPRESS_DB_HOST={{WORDPRESS_DB_HOST}} -e WORDPRESS_DB_NAME={{WORDPRESS_DB_NAME}}
         -e WORDPRESS_DB_USER={{WORDPRESS_DB_USER}} -e WORDPRESS_DB_PASSWORD={{WORDPRESS_DB_PASSWORD}}
         wordpress
     - name: check wordpress
       ansible.builtin.uri:
-        url: http://backend-1.ru-central1.internal:8080
+        url: http://{{inventory_hostname}}:{{load_balancer_port}}
 
 - hosts: nginx
   become: yes
@@ -58,7 +58,7 @@
   tasks:
     - name: check backend
       ansible.builtin.uri:
-        url: http://backend-1.ru-central1.internal:8080
+        url: http://backend-1.ru-central1.internal:{{load_balancer_port}}
     - name: install nginx
       ansible.builtin.yum:
         update_cache: yes
@@ -70,7 +70,7 @@
           events {}
           http {
             upstream backend {
-              server backend-1.ru-central1.internal:8080;
+              server backend-1.ru-central1.internal:{{load_balancer_port}};
             }
             server {
               listen {{load_balancer_port}};
@@ -92,7 +92,10 @@
         state: reloaded
     - name: check nginx
       ansible.builtin.uri:
-        url: http://nginx-1.ru-central1.internal:{{load_balancer_port}}
+        url: http://{{inventory_hostname}}:{{load_balancer_port}}
+    - name: check load balancer
+      ansible.builtin.uri:
+        url: http://{{load_balancer_addr}}:{{load_balancer_port}}
 
 - hosts: bastion
   become: yes
@@ -114,10 +117,13 @@
         content: |
           events {}
           http {
+            upstream backend {
+              server {{load_balancer_addr}}:{{load_balancer_port}};
+            }
             server {
-              listen 80;
+              listen {{load_balancer_port}};
               location / {
-                proxy_pass http://{{load_balancer_addr}}:{{load_balancer_port}};
+                proxy_pass http://backend;
               }
             }
           }
