--- a/dz3/playbook.yml
+++ b/dz3/playbook.yml
@@ -75,7 +75,7 @@
           events {}
           http {
             upstream backend {
-              ip_hash;
+              hash $http_x_real_ip;
               server backend-1.ru-central1.internal:{{load_balancer_port}};
               server backend-2.ru-central1.internal:{{load_balancer_port}};
             }
@@ -124,6 +124,7 @@
           http {
             server {
               listen 80;
+              proxy_set_header X-Real-IP $remote_addr;
               location / {
                 proxy_pass http://{{load_balancer_addr}}:{{load_balancer_port}};
               }
