--- a/dz3/playbook.yml
+++ b/dz3/playbook.yml
@@ -42,9 +42,14 @@
       tags:
         - never
         - uninstall
+    - ansible.builtin.file:
+        path: /var/www/html/wp-content/uploads
+        state: directory
+        mode: '0777'
     - name: start wordpress
       ansible.builtin.command: >
         docker run --name wordpress -p {{load_balancer_port}}:80 --restart always -d
+        -v /var/www/html/wp-content/uploads:/var/www/html/wp-content/uploads
         -e WORDPRESS_DB_HOST={{WORDPRESS_DB_HOST}} -e WORDPRESS_DB_NAME={{WORDPRESS_DB_NAME}}
         -e WORDPRESS_DB_USER={{WORDPRESS_DB_USER}} -e WORDPRESS_DB_PASSWORD={{WORDPRESS_DB_PASSWORD}}
         -e WORDPRESS_CONFIG_EXTRA='define('\'WP_SITEURL\',\''http://{{public_ip}}'\'');'
