--- a/dz3/inventory.ini
+++ b/dz3/inventory.ini
@@ -1,33 +1,43 @@
-; 51.250.3.20
+; 51.250.80.173
+
+; wordpress password lqRUtRRL3UfXsssR
 
 ; db
-; ssh -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no almalinux@db.ru-central1.internal -oProxyCommand="ssh almalinux@51.250.3.20 -i id_rsa -W %h:%p" -i id_rsa
+; ssh -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no centos@db.ru-central1.internal -oProxyCommand="ssh centos@51.250.80.173 -i id_rsa -W %h:%p" -i id_rsa
 
 ; nginx
-; ssh -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no almalinux@nginx-1.ru-central1.internal -oProxyCommand="ssh almalinux@51.250.3.20 -i id_rsa -W %h:%p" -i id_rsa
-; ssh -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no almalinux@nginx-2.ru-central1.internal -oProxyCommand="ssh almalinux@51.250.3.20 -i id_rsa -W %h:%p" -i id_rsa
+; ssh -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no centos@nginx-1.ru-central1.internal -oProxyCommand="ssh centos@51.250.80.173 -i id_rsa -W %h:%p" -i id_rsa
+; ssh -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no centos@nginx-2.ru-central1.internal -oProxyCommand="ssh centos@51.250.80.173 -i id_rsa -W %h:%p" -i id_rsa
 
 ; bastion
-; ssh -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no almalinux@bastion.ru-central1.internal -oProxyCommand="ssh almalinux@51.250.3.20 -i id_rsa -W %h:%p" -i id_rsa
+; ssh -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no centos@bastion.ru-central1.internal -oProxyCommand="ssh centos@51.250.80.173 -i id_rsa -W %h:%p" -i id_rsa
 
 ; backend
-; ssh -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no almalinux@backend-1.ru-central1.internal -oProxyCommand="ssh almalinux@51.250.3.20 -i id_rsa -W %h:%p" -i id_rsa
-; ssh -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no almalinux@backend-2.ru-central1.internal -oProxyCommand="ssh almalinux@51.250.3.20 -i id_rsa -W %h:%p" -i id_rsa
+; ssh -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no centos@backend-1.ru-central1.internal -oProxyCommand="ssh centos@51.250.80.173 -i id_rsa -W %h:%p" -i id_rsa
+; ssh -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no centos@backend-2.ru-central1.internal -oProxyCommand="ssh centos@51.250.80.173 -i id_rsa -W %h:%p" -i id_rsa
+
+[ssh_connection]
+ssh_args='-o ControlMaster=auto -o ControlPersist=60s'
 
 [all:vars]
-ansible_user=almalinux
+ansible_user=centos
 ansible_ssh_private_key_file=id_rsa
-ansible_ssh_common_args='-oProxyCommand="ssh -o StrictHostKeyChecking=accept-new -W %h:%p -q -i id_rsa almalinux@51.250.3.20" -i id_rsa -o StrictHostKeyChecking=accept-new'
+ansible_ssh_common_args='-oProxyCommand="ssh -o StrictHostKeyChecking=accept-new -W %h:%p -q -i id_rsa centos@51.250.80.173" -i id_rsa -o StrictHostKeyChecking=accept-new'
 
 WORDPRESS_DB_HOST=db.ru-central1.internal
 WORDPRESS_DB_NAME=wordpress_db
 WORDPRESS_DB_USER=wordpress_user
-WORDPRESS_DB_PASSWORD=z83lv2EEIdNn
+WORDPRESS_DB_PASSWORD=ptPPvYggwXTK4gFe
 
 load_balancer_addr=192.168.0.254
 load_balancer_port=80
 
-public_ip=51.250.3.20
+gfs2_target=iqn.2018-09.ru.otus:storage.target00
+gfs2_clients='backend-1.ru-central1.internal backend-2.ru-central1.internal'
+gfs2_pacemaker=otuscluster
+gfs2_mount_dir=/var/www/html/wp-content/uploads
+
+public_ip=51.250.80.173
 
 [db]
 db.ru-central1.internal
@@ -42,3 +52,6 @@ backend-2.ru-central1.internal
 [nginx]
 nginx-1.ru-central1.internal
 nginx-2.ru-central1.internal
+
+[gfs2_admin]
+backend-1.ru-central1.internal
