--- a/dz3/nginx_playbook.yml
+++ b/dz3/nginx_playbook.yml
@@ -66,7 +66,8 @@
         status_code: [200,301,302]
         follow_redirects: no
       async: 120
-    - ansible.builtin.command: yum install -y epel-release
+    - name: epel-release
+      ansible.builtin.command: yum install -y epel-release
     - name: install nginx
       ansible.builtin.yum:
         update_cache: yes
@@ -117,7 +118,8 @@
         status_code: [200,301,302]
         follow_redirects: no
       async: 120
-    - ansible.builtin.command: yum install -y epel-release
+    - name: epel-release
+      ansible.builtin.command: yum install -y epel-release
     - name: install nginx
       ansible.builtin.yum:
         update_cache: yes
