--- a/dz3/inventory.ini
+++ b/dz3/inventory.ini
@@ -1,20 +1,20 @@
-; 84.201.159.47
+; 62.84.116.217
 
-; wordpress password Z082%7F2bIXEAQzO
+; wordpress password E01Ll@jmfx%wazKJ
 
 ; db
-; ssh -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no centos@db.ru-central1.internal -oProxyCommand="ssh centos@84.201.159.47 -i id_rsa -W %h:%p" -i id_rsa
+; ssh -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no centos@db.ru-central1.internal -oProxyCommand="ssh centos@62.84.116.217 -i id_rsa -W %h:%p" -i id_rsa
 
 ; nginx
-; ssh -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no centos@nginx-1.ru-central1.internal -oProxyCommand="ssh centos@84.201.159.47 -i id_rsa -W %h:%p" -i id_rsa
-; ssh -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no centos@nginx-2.ru-central1.internal -oProxyCommand="ssh centos@84.201.159.47 -i id_rsa -W %h:%p" -i id_rsa
+; ssh -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no centos@nginx-1.ru-central1.internal -oProxyCommand="ssh centos@62.84.116.217 -i id_rsa -W %h:%p" -i id_rsa
+; ssh -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no centos@nginx-2.ru-central1.internal -oProxyCommand="ssh centos@62.84.116.217 -i id_rsa -W %h:%p" -i id_rsa
 
 ; bastion
-; ssh -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no centos@bastion.ru-central1.internal -oProxyCommand="ssh centos@84.201.159.47 -i id_rsa -W %h:%p" -i id_rsa
+; ssh -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no centos@bastion.ru-central1.internal -oProxyCommand="ssh centos@62.84.116.217 -i id_rsa -W %h:%p" -i id_rsa
 
 ; backend
-; ssh -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no centos@backend-1.ru-central1.internal -oProxyCommand="ssh centos@84.201.159.47 -i id_rsa -W %h:%p" -i id_rsa
-; ssh -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no centos@backend-2.ru-central1.internal -oProxyCommand="ssh centos@84.201.159.47 -i id_rsa -W %h:%p" -i id_rsa
+; ssh -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no centos@backend-1.ru-central1.internal -oProxyCommand="ssh centos@62.84.116.217 -i id_rsa -W %h:%p" -i id_rsa
+; ssh -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no centos@backend-2.ru-central1.internal -oProxyCommand="ssh centos@62.84.116.217 -i id_rsa -W %h:%p" -i id_rsa
 
 [ssh_connection]
 ssh_args='-o ControlMaster=auto -o ControlPersist=60s'
@@ -22,12 +22,12 @@ ssh_args='-o ControlMaster=auto -o ControlPersist=60s'
 [all:vars]
 ansible_user=centos
 ansible_ssh_private_key_file=id_rsa
-ansible_ssh_common_args='-oProxyCommand="ssh -o StrictHostKeyChecking=accept-new -W %h:%p -q -i id_rsa centos@84.201.159.47" -i id_rsa -o StrictHostKeyChecking=accept-new'
+ansible_ssh_common_args='-oProxyCommand="ssh -o StrictHostKeyChecking=accept-new -W %h:%p -q -i id_rsa centos@62.84.116.217" -i id_rsa -o StrictHostKeyChecking=accept-new'
 
 WORDPRESS_DB_HOST=db.ru-central1.internal
 WORDPRESS_DB_NAME=wordpress_db
 WORDPRESS_DB_USER=wordpress_user
-WORDPRESS_DB_PASSWORD=_K@tru3qNz5xOMl8
+WORDPRESS_DB_PASSWORD=Y3PwWtJ0st%74f@d
 
 load_balancer_addr=192.168.0.254
 load_balancer_port=80
@@ -37,7 +37,7 @@ gfs2_clients='backend-1.ru-central1.internal backend-2.ru-central1.internal'
 gfs2_pacemaker=otuscluster
 gfs2_mount_dir=/var/www/html/wp-content/uploads
 
-public_ip=84.201.159.47
+public_ip=62.84.116.217
 
 [db]
 db.ru-central1.internal
