--- a/dz3/nginx_playbook.yml
+++ b/dz3/nginx_playbook.yml
@@ -45,6 +45,8 @@
     - ansible.builtin.file:
         path: /var/www/html/wp-content/uploads
         mode: '0777'
+    - name: docker pull
+      ansible.builtin.command: docker pull wordpress
     - name: start wordpress
       ansible.builtin.command: >
         docker run --name wordpress -p {{load_balancer_port}}:80 --restart always -d
