--- a/dz3/nginx_playbook.yml
+++ b/dz3/nginx_playbook.yml
@@ -43,14 +43,14 @@
         - never
         - uninstall
     - ansible.builtin.file:
-        path: /var/www/html/wp-content/uploads
+        path: "{{gfs2_mount_dir}}"
         mode: '0777'
     - name: docker pull
       ansible.builtin.command: docker pull wordpress
     - name: start wordpress
       ansible.builtin.command: >
         docker run --name wordpress -p {{load_balancer_port}}:80 --restart always -d
-        -v {{gfs2_mount_dir}}:/var/www/html/wp-content/uploads
+        -v {{gfs2_mount_dir}}:{{gfs2_mount_dir}}
         -e WORDPRESS_DB_HOST={{WORDPRESS_DB_HOST}} -e WORDPRESS_DB_NAME={{WORDPRESS_DB_NAME}}
         -e WORDPRESS_DB_USER={{WORDPRESS_DB_USER}} -e WORDPRESS_DB_PASSWORD={{WORDPRESS_DB_PASSWORD}}
         -e WORDPRESS_CONFIG_EXTRA='define('\'WP_SITEURL\',\''http://{{public_ip}}'\'');'
