--- a/dz4/mysql_playbook.yml
+++ b/dz4/mysql_playbook.yml
@@ -139,12 +139,14 @@
         name:
           - percona-xtradb-cluster-client
           - proxysql2
-    - systemd:
+    - name: start proxysql
+      systemd:
         name: proxysql
         state: started
         enabled: yes
 
-    - command: mysql -uadmin -padmin -h 127.0.0.1 -P 6032
+    - name: configure proxysql
+      command: mysql -uadmin -padmin -h 127.0.0.1 -P 6032
       args:
         stdin: '{{item}}'
       with_items:
@@ -157,14 +159,16 @@
         - LOAD MYSQL SERVERS TO RUNTIME;
         - SAVE MYSQL SERVERS TO DISK;
 
-    - command: mysql -uroot -prootPass
+    - name: create proxysql user
+      command: mysql -uroot -prootPass
       args:
         stdin: '{{item}}'
       with_items:
         - CREATE USER 'proxysql'@'%' IDENTIFIED WITH caching_sha2_password by 'Otus321$';
         - FLUSH PRIVILEGES;
 
-    - command: mysql -uadmin -padmin -h 127.0.0.1 -P 6032
+    - name: create proxysql user
+      command: mysql -uadmin -padmin -h 127.0.0.1 -P 6032
       args:
         stdin: '{{item}}'
       with_items:
@@ -183,51 +187,3 @@
         - CREATE USER '{{WORDPRESS_DB_USER}}'@'%' IDENTIFIED WITH mysql_native_password BY '{{WORDPRESS_DB_PASSWORD}}';
         - GRANT ALL ON *.* TO '{{WORDPRESS_DB_USER}}'@'%';
         - FLUSH PRIVILEGES;
-
-
-
-
-
-
-
-
-
-
-
-# - hosts: db-2.ru-central1.internal
-#   become: yes
-#   gather_facts: no
-#   tasks:
-#     - name: upload certs
-#       ansible.builtin.copy:
-#         src: var/lib/mysql/{{ item }}
-#         dest: db/ssl/
-#         owner: mysql
-#         group: mysql
-#       with_items:
-#         - ca.pem
-#         - server-cert.pem
-#         - server-key.pem
-#     - name: start mysql
-#       ansible.builtin.systemd:
-#         name: mysql
-#         state: started
-#         enabled: yes
-#     - name: restart mysql
-#       ansible.builtin.systemd:
-#         name: mysql
-#         state: restarted
-
-  # vars:
-  #   mysql_root_password: super-secure-password
-  #   mysql_databases:
-  #     - name: "{{WORDPRESS_DB_NAME}}"
-  #       encoding: latin1
-  #       collation: latin1_general_ci
-  #   mysql_users:
-  #     - name: "{{WORDPRESS_DB_USER}}"
-  #       host: "%"
-  #       password: "{{WORDPRESS_DB_PASSWORD}}"
-  #       priv: "wordpress_db.*:ALL"
-  # roles:
-  #   - role: geerlingguy.mysql
