--- a/dz4/nginx_playbook.yml
+++ b/dz4/nginx_playbook.yml
@@ -73,8 +73,23 @@
         name: nginx
         state: started
         enabled: yes
-    - name: check public ip
-      ansible.builtin.uri:
-        url: http://{{public_ip}}
-        status_code: [200,301,302,403]
-        follow_redirects: no
+    - name: wait
+      ansible.builtin.wait_for:
+        host: '{{public_ip}}'
+        port: '{{load_balancer_port}}'
+        state: started
+        delay: 0
+        timeout: 3
+      ignore_errors: yes
+    - ansible.builtin.uri:
+        url: http://{{public_ip}}/wordpress/wp-admin/install.php?step=2
+        method: POST
+        body_format: form-urlencoded
+        body:
+          weblog_title: otus
+          user_name: admin
+          admin_password: bQ2vSkWKzP4kGRDi
+          admin_password2: bQ2vSkWKzP4kGRDi
+          admin_email: test@example.com
+          Submit: Install WordPress
+          language: ''
